<resources>
    <string name="app_name">evaluacion2</string>
    <string name="registro_a_la_app">Registro a la app</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="si_ya_tienes_una_cuenta_creada">si ya tienes una cuenta creada</string>
    <string name="si_ya_tienes_una_cuenta_creada_has_click_iniciar_sesion">si_ya_tienes_una_cuenta_creada has click iniciar sesion</string>
    <string name="si_no_tienes_una_cuenta_registrate">si no tienes una cuenta registrate</string>
    <string name="entrar_a_la_app">Entrar a la app</string>
    <string name="usuario">Usuario</string>
    <string name="enviar_datos">enviar datos</string>
    <string name="respuesta_actual_de_la_cocina">Respuesta actual de la cocina</string>
    <string name="la_hora_es">la hora es:</string>
    <string name="la_fecha_de_hoy_es">la fecha de hoy es:</string>
    <string name="volver_al_men_principal">Volver al menú principal</string>
    <string name="la_humedad_es">La humedad es:</string>
    <string name="el_nivel_de_humo_es">El nivel de humo es:</string>
    <string name="ingreso_de_datos_en_el_sistema">ingreso_de_datos_en_el_sistema</string>
    <string name="ingresar_hora">Ingresar_hora</string>
    <string name="ingrese_la_fecha">ingrese_la_fecha</string>
    <string name="nivel_actual_de_la_humedad">Nivel actual de la humedad</string>
    <string name="nivel_actual_del_humo">Nivel actual del humo</string>
    <string name="contrasena">contrasena</string>
    <string name="volver_a_la_pagina_principal">volver_a_la_pagina_principal</string>
    <string name="alerta_en_la_cocina_alta_temperaturas_y_humos_detectados_en_el_ambiente_nivel_de_humedad_85_aseg_rese_de_ventilar_el_rea_tiempo_14_15_fecha_03_10_2024">⚠️ alerta en la cocina: Alta temperaturas y humos detectados en el ambiente, Nivel de Humedad: 85%. asegúrese de ventilar el área. tiempo: 14:15, Fecha:03/10/2024</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="enviar_datos_al_sisetma">Enviar datos al sisetma</string>
    <string name="ingresar_informacion_de_la_cocina">Ingresar informacion de la cocina</string>
    <string name="ingresar_hora_actual">Ingresar hora actual</string>
    <string name="ingresar_fecha">Ingresar fecha</string>
    <string name="notificaci_n_de_peligro">Notificación de peligro</string>
    <string name="bienvenido">bienvenido</string>
    <string name="bienvenido_a_casitas_en_llamas">Bienvenido a casitas en llamas</string>
    <string name="inspeccion_de_humo">Inspeccion de humo</string>
    <string name="configuracion_del_sistema">Configuracion del sistema</string>
    <string name="sistema_de_notificaciones">Sistema de notificaciones</string>
    <string name="los_niveles_de_humedad_activaran_la_alarma_de_la_app">Los niveles de humedad activaran la alarma de la app</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="volver_al_menu_inicial">Volver al menu inicial</string>
    <string name="el_sensor_se_active_de_manera_automatica">El sensor se active de manera automatica</string>
    <string name="que_vibre_cuando_los_niveles_sean_alto">Que vibre cuando los niveles sean alto</string>
    <string name="recibir_notificaciones_de_la_aplicacion">Recibir notificaciones de la aplicacion</string>
    <string name="configuracion_general">Configuracion general</string>
    <string name="enviar_datos_al_sistema">enviar_datos_al_sistema</string>
    <string name="enviar_datos_">Enviar datos</string>
    <string name="volver_al_menu_principal">Volver al menú principal</string>
</resources>