<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginVertical="30dp" />


    <EditText
        android:autofillHints="name"
        android:inputType="text"
        android:id="@+id/inputNombre"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/gris_oscuro"
        android:hint="@string/usuario"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />


    <EditText
        android:autofillHints="password"
        android:id="@+id/inputContrasena"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/gris_oscuro"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/entrar_a_la_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/si_no_tienes_una_cuenta_registrate"
        android:textSize="19sp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnVolverRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/registrarse" />
</LinearLayout>
