<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/turr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configuracion_app">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:gravity="center"
        android:text="@string/configuracion_general"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris_claro"
        android:textStyle="italic"
        android:text="@string/recibir_notificaciones_de_la_aplicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308"
        tools:layout_editor_absoluteX="0dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:background="@color/gris_claro"
        android:text="@string/que_vibre_cuando_los_niveles_sean_alto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        tools:layout_editor_absoluteX="16dp" />


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris_claro"
        android:textStyle="italic"
        android:text="@string/el_sensor_se_active_de_manera_automatica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:layout_editor_absoluteX="0dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576"
        tools:layout_editor_absoluteX="0dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris_claro"
        android:textStyle="italic"
        android:text="@string/los_niveles_de_humedad_activaran_la_alarma_de_la_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnVolverSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        tools:layout_editor_absoluteX="36dp" />

    <Button
        android:id="@+id/btnVEliminarCuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/eliminar_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/volver_al_menu_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

</androidx.constraintlayout.widget.ConstraintLayout>
