<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarrillo"
    tools:context=".pagina_termohigrometro">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuesta_actual_de_la_cocina"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/mostarHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/la_hora_es"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/mostarFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/la_fecha_de_hoy_es"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/volver_al_men_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/mostarHumedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="@string/la_humedad_es"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mostarHumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:text="@string/el_nivel_de_humo_es"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
